--- a/app.json
+++ b/app.json
@@ -3,7 +3,9 @@
     "pages/index/index",
     "pages/logs/logs",
     "pages/mine/mine",
-    "pages/circle/circle"
+    "pages/circle/circle",
+     "pages/meeting/meeting"
+
   ],
   "window": {
     "backgroundTextStyle": "light",
