--- a/project.config.json
+++ b/project.config.json
@@ -36,12 +36,18 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "茶圈",
-					"pathName": "pages/circle/circle"
+					"pathName": "pages/circle/circle",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "茶会",
+					"pathName": "pages/meeting/meeting"
 				}
 			]
 		}
