--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -47,7 +47,14 @@
 				{
 					"id": -1,
 					"name": "茶会",
-					"pathName": "pages/meeting/meeting"
+					"pathName": "pages/meeting/meeting",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "22",
+					"pathName": "pages/mine/mine",
+					"query": ""
 				}
 			]
 		}
