--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 4,
+			"current": 5,
 			"list": [
 				{
 					"id": -1,
@@ -65,7 +65,13 @@
 				{
 					"id": -1,
 					"name": "会员",
-					"pathName": "pages/members/members"
+					"pathName": "pages/members/members",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "code",
+					"pathName": "pages/code/code"
 				}
 			]
 		}
