--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
-	"appid": "wxe81efe5d23e83c7d",
+	"appid": "wxaa091b014a6fa464",
 	"projectname": "4685456",
 	"debugOptions": {
 		"hidedInDevtools": []
