--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 7,
+			"current": 8,
 			"list": [
 				{
 					"id": -1,
@@ -83,7 +83,13 @@
 				{
 					"id": -1,
 					"name": "商品详情",
-					"pathName": "pages/goods_detail/goods_detail"
+					"pathName": "pages/goods_detail/goods_detail",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "添加地址",
+					"pathName": "pages/add_address/add_address"
 				}
 			]
 		}
