--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 8,
+			"current": 9,
 			"list": [
 				{
 					"id": -1,
@@ -89,7 +89,13 @@
 				{
 					"id": -1,
 					"name": "添加地址",
-					"pathName": "pages/add_address/add_address"
+					"pathName": "pages/add_address/add_address",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "地址详情",
+					"pathName": "pages/select_address/select_address"
 				}
 			]
 		}
