--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 9,
+			"current": 10,
 			"list": [
 				{
 					"id": -1,
@@ -95,7 +95,13 @@
 				{
 					"id": -1,
 					"name": "地址详情",
-					"pathName": "pages/select_address/select_address"
+					"pathName": "pages/select_address/select_address",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "jieshuan",
+					"pathName": "pages/settlement/settlement"
 				}
 			]
 		}
