--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
       "pages/settlement/settlement",
       "pages/select_shop_address/select_shop_address",
       "pages/select_save_address/select_save_address",
-      "pages/buy/buy"
+      "pages/buy/buy",
+      "pages/query/query"
       
 
 
