--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 13,
+			"current": 15,
 			"list": [
 				{
 					"id": -1,
@@ -119,7 +119,19 @@
 				{
 					"id": -1,
 					"name": "dd",
-					"pathName": "pages/query/query"
+					"pathName": "pages/query/query",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "ewqrdwe",
+					"pathName": "pages/query/query",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "购物车",
+					"pathName": "pages/buy/buy"
 				}
 			]
 		}
