--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
       "pages/select_save_address/select_save_address",
       "pages/buy/buy",
       "pages/query/query",
-      "pages/order/order"
+      "pages/order/order",
+      "pages/test/test"
       
 
 
