--- a/project.config.json
+++ b/project.config.json
@@ -8,20 +8,17 @@
 		"es6": true,
 		"postcss": true,
 		"minified": true,
-		"newFeature": true
+		"newFeature": true,
+		"autoAudits": false
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
-
-//	"appid": "wxaa091b014a6fa464",
-
 	"appid": "wx301c1368929fdba8",
-
-	"projectname": "4685456",
+	"projectname": "2222",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
-	"isGameTourist": false,
+	"scripts": {},
 	"condition": {
 		"search": {
 			"current": -1,
@@ -36,11 +33,10 @@
 			"list": []
 		},
 		"game": {
-			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": 16,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
@@ -77,71 +73,6 @@
 					"name": "code",
 					"pathName": "pages/code/code",
 					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "商品",
-					"pathName": "pages/good/good",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "商品详情",
-					"pathName": "pages/goods_detail/goods_detail",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "添加地址",
-					"pathName": "pages/add_address/add_address",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "地址详情",
-					"pathName": "pages/select_address/select_address",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "jieshuan",
-					"pathName": "pages/settlement/settlement",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "结算",
-					"pathName": "pages/settlement/settlement",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "购物车",
-					"pathName": "pages/buy/buy",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "dd",
-					"pathName": "pages/query/query",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "ewqrdwe",
-					"pathName": "pages/query/query",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "购物车",
-					"pathName": "pages/buy/buy",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "test",
-					"pathName": "pages/test/test"
 				}
 			]
 		}
