--- a/app.json
+++ b/app.json
@@ -12,6 +12,7 @@
       "pages/goods_detail/goods_detail",
       "pages/add_address/add_address",
       "pages/select_address/select_address",
+      "pages/change_address/change_address",
       "pages/settlement/settlement",
       "pages/select_shop_address/select_shop_address",
       "pages/select_save_address/select_save_address",
