--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 6,
+			"current": 7,
 			"list": [
 				{
 					"id": -1,
@@ -77,7 +77,13 @@
 				{
 					"id": -1,
 					"name": "添加地址",
-					"pathName": "pages/add_address/add_address"
+					"pathName": "pages/add_address/add_address",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "购物车",
+					"pathName": "pages/buy/buy"
 				}
 			]
 		}
