--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 8,
+			"current": 9,
 			"list": [
 				{
 					"id": -1,
@@ -89,7 +89,13 @@
 				{
 					"id": -1,
 					"name": "结算",
-					"pathName": "pages/settlement/settlement"
+					"pathName": "pages/settlement/settlement",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "订单",
+					"pathName": "pages/order/order"
 				}
 			]
 		}
