--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 10,
+			"current": 11,
 			"list": [
 				{
 					"id": -1,
@@ -101,7 +101,13 @@
 				{
 					"id": -1,
 					"name": "good",
-					"pathName": "pages/good/good"
+					"pathName": "pages/good/good",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "关于我们",
+					"pathName": "pages/about/about"
 				}
 			]
 		}
