--- a/app.json
+++ b/app.json
@@ -19,7 +19,15 @@
       "pages/buy/buy",
       "pages/query/query",
       "pages/order/order",
-      "pages/test/test"
+      "pages/test/test",
+      "pages/about/about",
+      "pages/contract/contract",
+      "pages/contract_detail/contract_detail",
+      "pages/problement/problement",
+      "pages/news/news",
+      "pages/account/account"
+      
+      
   ],
   "window": {
     "backgroundTextStyle": "light",
