--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 10,
+			"current": 14,
 			"list": [
 				{
 					"id": -1,
@@ -101,7 +101,31 @@
 				{
 					"id": -1,
 					"name": "good",
-					"pathName": "pages/good/good"
+					"pathName": "pages/good/good",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "关于我们",
+					"pathName": "pages/about/about",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "hetong",
+					"pathName": "pages/contract/contract",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "hetong",
+					"pathName": "pages/problement/problement",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "我的账户",
+					"pathName": "pages/account/account"
 				}
 			]
 		}
