--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 15,
+			"current": 16,
 			"list": [
 				{
 					"id": -1,
@@ -131,7 +131,13 @@
 				{
 					"id": -1,
 					"name": "充值",
-					"pathName": "pages/recharge/recharge"
+					"pathName": "pages/recharge/recharge",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "优惠劵",
+					"pathName": "pages/coupon/coupon"
 				}
 			]
 		}
