--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 16,
+			"current": 17,
 			"list": [
 				{
 					"id": -1,
@@ -137,7 +137,13 @@
 				{
 					"id": -1,
 					"name": "优惠劵",
-					"pathName": "pages/coupon/coupon"
+					"pathName": "pages/coupon/coupon",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "密码",
+					"pathName": "pages/password/password"
 				}
 			]
 		}
