--- a/project.config.json
+++ b/project.config.json
@@ -13,8 +13,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
-	"appid": "wxb39c33c0d49256fc",
-	"projectname": "%E8%8C%B6%E5%95%86",
+	"appid": "wx301c1368929fdba8",
+	"projectname": "111",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
