--- a/app.json
+++ b/app.json
@@ -32,7 +32,8 @@
       "pages/recharge/recharge",
       "pages/integral_center/integral_center",
       "pages/coupon/coupon",
-      "pages/password/password"
+      "pages/password/password",
+      "pages/coupon_good/coupon_good"
       
      
       
