--- a/app.json
+++ b/app.json
@@ -33,7 +33,8 @@
       "pages/integral_center/integral_center",
       "pages/coupon/coupon",
       "pages/password/password",
-      "pages/coupon_good/coupon_good"
+      "pages/coupon_good/coupon_good",
+      "pages/card/card"
       
      
       
