--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 17,
+			"current": 18,
 			"list": [
 				{
 					"id": -1,
@@ -143,7 +143,13 @@
 				{
 					"id": -1,
 					"name": "密码",
-					"pathName": "pages/password/password"
+					"pathName": "pages/password/password",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "银行卡",
+					"pathName": "pages/card/card"
 				}
 			]
 		}
