--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 18,
+			"current": 23,
 			"list": [
 				{
 					"id": -1,
@@ -149,7 +149,37 @@
 				{
 					"id": -1,
 					"name": "银行卡",
-					"pathName": "pages/card/card"
+					"pathName": "pages/card/card",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "修改页面",
+					"pathName": "pages/change/change",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "修改账户",
+					"pathName": "pages/change_account/change_account",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "修改昵称",
+					"pathName": "pages/change_name/change_name",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "消息中心",
+					"pathName": "pages/news/news",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "消息详情",
+					"pathName": "pages/news_detail/news_detail"
 				}
 			]
 		}
