--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 23,
+			"current": 25,
 			"list": [
 				{
 					"id": -1,
@@ -179,7 +179,19 @@
 				{
 					"id": -1,
 					"name": "消息详情",
-					"pathName": "pages/news_detail/news_detail"
+					"pathName": "pages/news_detail/news_detail",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "我的收藏",
+					"pathName": "pages/collection/collection",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "添加银行卡",
+					"pathName": "pages/add_card/add_card"
 				}
 			]
 		}
