--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 25,
+			"current": 29,
 			"list": [
 				{
 					"id": -1,
@@ -191,7 +191,31 @@
 				{
 					"id": -1,
 					"name": "添加银行卡",
-					"pathName": "pages/add_card/add_card"
+					"pathName": "pages/add_card/add_card",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "账单",
+					"pathName": "pages/bill/bill",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "账单",
+					"pathName": "pages/integral_record/integral_record",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "已开发票",
+					"pathName": "pages/invoice/invoice",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "提现",
+					"pathName": "pages/withdrawal/withdrawal"
 				}
 			]
 		}
