--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 29,
+			"current": 30,
 			"list": [
 				{
 					"id": -1,
@@ -215,7 +215,13 @@
 				{
 					"id": -1,
 					"name": "提现",
-					"pathName": "pages/withdrawal/withdrawal"
+					"pathName": "pages/withdrawal/withdrawal",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "订单详情",
+					"pathName": "pages/order_detail/order_detail"
 				}
 			]
 		}
