--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 30,
+			"current": 34,
 			"list": [
 				{
 					"id": -1,
@@ -221,7 +221,31 @@
 				{
 					"id": -1,
 					"name": "订单详情",
-					"pathName": "pages/order_detail/order_detail"
+					"pathName": "pages/order_detail/order_detail",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "售后",
+					"pathName": "pages/after_sales/after_sales",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "申请售后",
+					"pathName": "pages/apply_after_sales/apply_after_sales",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "售后详情",
+					"pathName": "pages/after_sales_detail/after_sales_detail",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "售后详情",
+					"pathName": "pages/evaluation/evaluation"
 				}
 			]
 		}
