--- a/app.json
+++ b/app.json
@@ -51,7 +51,9 @@
       "pages/after_sales/after_sales",
       "pages/apply_after_sales/apply_after_sales",
       "pages/after_sales_detail/after_sales_detail",
-      "pages/evaluation/evaluation"
+      "pages/evaluation/evaluation",
+      "pages/logistics/logistics"
+      
       
       
       
