--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 34,
+			"current": 35,
 			"list": [
 				{
 					"id": -1,
@@ -245,7 +245,13 @@
 				{
 					"id": -1,
 					"name": "售后详情",
-					"pathName": "pages/evaluation/evaluation"
+					"pathName": "pages/evaluation/evaluation",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "售后详情",
+					"pathName": "pages/logistics/logistics"
 				}
 			]
 		}
