--- a/app.json
+++ b/app.json
@@ -1,62 +1,67 @@
 {
-
   "pages": [
-    "pages/logs/logs", 
+    "pages/logs/logs",
     "pages/index/index",
     "pages/mine/mine",
     "pages/circle/circle",
-     "pages/meeting/meeting",
-     "pages/detail/detail",
-     "pages/members/members",
-      "pages/code/code",
-      "pages/good/good",
-      "pages/goods_detail/goods_detail",
-      "pages/add_address/add_address",
-      "pages/select_address/select_address",
-      "pages/change_address/change_address",
-      "pages/settlement/settlement",
-      "pages/select_shop_address/select_shop_address",
-      "pages/select_save_address/select_save_address",
-      "pages/buy/buy",
-      "pages/order/order",
-      "pages/test/test",
-      "pages/about/about",
-      "pages/contract/contract",
-      "pages/contract_detail/contract_detail",
-      "pages/problement/problement",
-      "pages/problement_detail/problement_detail",
-      "pages/news/news",
-      "pages/account/account",
-      "pages/identity_authentication/identity_authentication",
-      "pages/recharge/recharge",
-      "pages/integral_center/integral_center",
-      "pages/coupon/coupon",
-      "pages/password/password",
-      "pages/coupon_good/coupon_good",
-      "pages/card/card",
-      "pages/integral_good_detail/integral_good_detail",
-      "pages/change/change",
-      "pages/change_account/change_account",
-      "pages/change_name/change_name",
-      "pages/news_detail/news_detail",
-      "pages/collection/collection",
-      "pages/add_card/add_card",
-      "pages/withdrawal/withdrawal", 
-      "pages/bill/bill",
-      "pages/integral_record/integral_record",
-      "pages/invoice/invoice",
-      "pages/order_detail/order_detail",
-      "pages/after_sales/after_sales",
-      "pages/apply_after_sales/apply_after_sales",
-      "pages/after_sales_detail/after_sales_detail",
-      "pages/evaluation/evaluation",
-      "pages/logistics/logistics",
-      "pages/forget_password/forget_password",
-      "pages/integral_settlement/integral_settlement",
-      "pages/integral_order/integral_order"
-
+    "pages/meeting/meeting",
+    "pages/detail/detail",
+    "pages/members/members",
+    "pages/code/code",
+    "pages/good/good",
+    "pages/goods_detail/goods_detail",
+    "pages/add_address/add_address",
+    "pages/select_address/select_address",
+    "pages/change_address/change_address",
+    "pages/settlement/settlement",
+    "pages/select_shop_address/select_shop_address",
+    "pages/select_save_address/select_save_address",
+    "pages/buy/buy",
+    "pages/order/order",
+    "pages/test/test",
+    "pages/about/about",
+    "pages/contract/contract",
+    "pages/contract_detail/contract_detail",
+    "pages/problement/problement",
+    "pages/problement_detail/problement_detail",
+    "pages/news/news",
+    "pages/account/account",
+    "pages/identity_authentication/identity_authentication",
+    "pages/recharge/recharge",
+    "pages/integral_center/integral_center",
+    "pages/coupon/coupon",
+    "pages/password/password",
+    "pages/coupon_good/coupon_good",
+    "pages/card/card",
+    "pages/integral_good_detail/integral_good_detail",
+    "pages/change/change",
+    "pages/change_account/change_account",
+    "pages/change_name/change_name",
+    "pages/news_detail/news_detail",
+    "pages/collection/collection",
+    "pages/add_card/add_card",
+    "pages/withdrawal/withdrawal",
+    "pages/bill/bill",
+    "pages/integral_record/integral_record",
+    "pages/invoice/invoice",
+    "pages/order_detail/order_detail",
+    "pages/after_sales/after_sales",
+    "pages/apply_after_sales/apply_after_sales",
+    "pages/after_sales_detail/after_sales_detail",
+    "pages/evaluation/evaluation",
+    "pages/logistics/logistics",
+    "pages/forget_password/forget_password",
+    "pages/integral_settlement/integral_settlement",
+    "pages/integral_order/integral_order"
   ],
-   
+  "subPackages": [
+    {
+      "root": "pages/storage",
+      "pages": [
+        "pages/view/view"
+      ]
+    }
+  ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F9F9F9",
@@ -75,12 +80,17 @@
         "text": "首页"
       },
       {
+        "selectedIconPath": "images/icob.png",
+        "iconPath": "images/icoa.png",
+        "pagePath": "pages/index/index",
+        "text": "茶仓"
+      },
+      {
         "selectedIconPath": "images/icod.png",
         "iconPath": "images/icoc.png",
         "pagePath": "pages/circle/circle",
         "text": "茶圈"
       },
-     
       {
         "selectedIconPath": "images/icoh.png",
         "iconPath": "images/icog.png",
