--- a/app.json
+++ b/app.json
@@ -60,7 +60,8 @@
       "root": "storage/pages",
       "pages": [
         "stock_detail/stock_detail",
-        "out_of_warehouse/out_of_warehouse"
+        "out_of_warehouse/out_of_warehouse",
+        "realtime_data/realtime_data"
       ]
     }
   ],
