--- a/app.json
+++ b/app.json
@@ -4,8 +4,6 @@
     "pages/index/index",
     "pages/mine/mine",
     "pages/circle/circle",
-    "pages/meeting/meeting",
-    "pages/detail/detail",
     "pages/members/members",
     "pages/code/code",
     "pages/good/good",
@@ -61,7 +59,9 @@
       "pages": [
         "stock_detail/stock_detail",
         "out_of_warehouse/out_of_warehouse",
-        "realtime_data/realtime_data"
+        "realtime_data/realtime_data",
+        "meeting/meeting",
+        "detail/detail"
       ]
     }
   ],
