--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 31,
+			"current": 33,
 			"list": [
 				{
 					"id": -1,
@@ -238,22 +238,11 @@
 					"query": ""
 				},
 				{
-					"id": -1,
+					"id": 33,
 					"name": "售后详情",
-					"pathName": "pages/after_sales_detail/after_sales_detail",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "售后详情",
-					"pathName": "pages/evaluation/evaluation",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "售后详情",
-					"pathName": "pages/logistics/logistics",
-					"query": ""
+					"pathName": "aftersale/pages/aftersale_detail/aftersale_detail",
+					"query": "",
+					"scene": null
 				},
 				{
 					"id": -1,
@@ -278,6 +267,13 @@
 					"id": -1,
 					"name": "实时数据",
 					"pathName": "storage/pages/realtime_data/realtime_data",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "售后详情-成功",
+					"pathName": "aftersale/pages/aftersale_success/aftersale_success",
 					"query": "",
 					"scene": null
 				}
