--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 33,
+			"current": 39,
 			"list": [
 				{
 					"id": -1,
@@ -276,6 +276,11 @@
 					"pathName": "aftersale/pages/aftersale_success/aftersale_success",
 					"query": "",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "物流",
+					"pathName": "pages/logistics/logistics"
 				}
 			]
 		}
