--- a/project.config.json
+++ b/project.config.json
@@ -14,7 +14,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.6.1",
 	"appid": "wx301c1368929fdba8",
-	"projectname": "111",
+	"projectname": "fan",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
