--- a/app.json
+++ b/app.json
@@ -50,7 +50,8 @@
     "pages/forget_password/forget_password",
     "pages/integral_settlement/integral_settlement",
     "pages/integral_order/integral_order",
-    "pages/storage/view/view"
+    "pages/storage/view/view",
+    "pages/seach/seach"
   ],
   "subpackages": [
     {
