--- a/app.json
+++ b/app.json
@@ -59,6 +59,7 @@
         "stock_detail/stock_detail",
         "out_of_warehouse/out_of_warehouse",
         "realtime_data/realtime_data",
+        "zcDetail/zcDetail",
         "meeting/meeting",
         "detail/detail"
       ]
