--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 39,
+			"current": 40,
 			"list": [
 				{
 					"id": -1,
@@ -280,7 +280,15 @@
 				{
 					"id": -1,
 					"name": "物流",
-					"pathName": "pages/logistics/logistics"
+					"pathName": "pages/logistics/logistics",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "众筹详情",
+					"pathName": "storage/pages/zcDetail/zcDetail",
+					"query": "",
+					"scene": null
 				}
 			]
 		}
