--- a/app.json
+++ b/app.json
@@ -52,7 +52,6 @@
     "pages/integral_order/integral_order",
     "pages/storage/view/view",
     "pages/seach/seach"
-    
   ],
   "subpackages": [
     {
@@ -62,6 +61,7 @@
         "out_of_warehouse/out_of_warehouse",
         "realtime_data/realtime_data",
         "zcDetail/zcDetail",
+        "zcOrder/zcOrder",
         "meeting/meeting",
         "detail/detail"
       ]
@@ -86,9 +86,6 @@
         "invoice_add/invoice_add"
       ]
     }
-   
-    
-
   ],
   "window": {
     "backgroundTextStyle": "light",
