--- a/project.config.json
+++ b/project.config.json
@@ -38,224 +38,7 @@
 		"miniprogram": {
 			"current": 43,
 			"list": [
-				{
-					"id": -1,
-					"name": "茶圈",
-					"pathName": "pages/circle/circle",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "茶会",
-					"pathName": "pages/meeting/meeting",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "详细信息",
-					"pathName": "pages/detail/detail",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "我的",
-					"pathName": "pages/mine/mine",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "会员",
-					"pathName": "pages/members/members",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "code",
-					"pathName": "pages/code/code",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "添加地址",
-					"pathName": "pages/add_address/add_address",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "购物车",
-					"pathName": "pages/buy/buy",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "结算",
-					"pathName": "pages/settlement/settlement",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "订单",
-					"pathName": "pages/order/order",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "good",
-					"pathName": "pages/good/good",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "关于我们",
-					"pathName": "pages/about/about",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "hetong",
-					"pathName": "pages/contract/contract",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "hetong",
-					"pathName": "pages/problement/problement",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "我的账户",
-					"pathName": "pages/account/account",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "充值",
-					"pathName": "pages/recharge/recharge",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "优惠劵",
-					"pathName": "pages/coupon/coupon",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "密码",
-					"pathName": "pages/password/password",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "银行卡",
-					"pathName": "pages/card/card",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "修改页面",
-					"pathName": "pages/change/change",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "修改账户",
-					"pathName": "pages/change_account/change_account",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "修改昵称",
-					"pathName": "pages/change_name/change_name",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "消息中心",
-					"pathName": "pages/news/news",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "消息详情",
-					"pathName": "pages/news_detail/news_detail",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "我的收藏",
-					"pathName": "pages/collection/collection",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "添加银行卡",
-					"pathName": "pages/add_card/add_card",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "账单",
-					"pathName": "pages/bill/bill",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "账单",
-					"pathName": "pages/integral_record/integral_record",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "已开发票",
-					"pathName": "pages/invoice/invoice",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "提现",
-					"pathName": "pages/withdrawal/withdrawal",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "订单详情",
-					"pathName": "pages/order_detail/order_detail",
-					"query": ""
-				},
-				{
-					"id": 31,
-					"name": "售后",
-					"pathName": "aftersale/pages/aftersale_detail/aftersale_detail",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "申请售后",
-					"pathName": "pages/apply_after_sales/apply_after_sales",
-					"query": ""
-				},
-				{
-					"id": 33,
-					"name": "售后详情",
-					"pathName": "aftersale/pages/aftersale_detail/aftersale_detail",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "test",
-					"pathName": "pages/test/test",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "忘记密码",
-					"pathName": "pages/forget_password/forget_password",
-					"query": ""
-				},
+				
 				{
 					"id": -1,
 					"name": "众筹",
@@ -272,40 +55,10 @@
 				},
 				{
 					"id": -1,
-					"name": "售后详情-成功",
-					"pathName": "aftersale/pages/aftersale_success/aftersale_success",
+					"name": "添加发票",
+					"pathName": "invoice/pages/invoice_add/invoice_add",
 					"query": "",
 					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "物流",
-					"pathName": "pages/logistics/logistics",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "关于我们",
-					"pathName": "pages/about/about",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "搜索页面",
-					"pathName": "pages/seach/seach",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "扫码",
-					"pathName": "sweep/pages/sweep_detail/sweep_detail",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "存茶地址",
-					"pathName": "pages/select_save_address/select_save_address"
 				}
 			]
 		}
