--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 43,
+			"current": 44,
 			"list": [
 				{
 					"id": -1,
@@ -305,7 +305,14 @@
 				{
 					"id": -1,
 					"name": "存茶地址",
-					"pathName": "pages/select_save_address/select_save_address"
+					"pathName": "pages/select_save_address/select_save_address",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "众筹订单",
+					"pathName": "storage/pages/zcOrder/zcOrder",
+					"scene": null
 				}
 			]
 		}
