--- a/project.config.json
+++ b/project.config.json
@@ -36,9 +36,8 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 44,
+			"current": 3,
 			"list": [
-				
 				{
 					"id": -1,
 					"name": "众筹",
@@ -59,6 +58,11 @@
 					"pathName": "invoice/pages/invoice_add/invoice_add",
 					"query": "",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "测试",
+					"pathName": "pages/test/test"
 				}
 			]
 		}
