--- a/app.json
+++ b/app.json
@@ -51,7 +51,8 @@
     "pages/integral_settlement/integral_settlement",
     "pages/integral_order/integral_order",
     "pages/storage/view/view",
-    "pages/seach/seach"
+    "pages/seach/seach",
+    "live/index/index"
   ],
   "subpackages": [
     {
