--- a/app.json
+++ b/app.json
@@ -51,8 +51,7 @@
     "pages/integral_settlement/integral_settlement",
     "pages/integral_order/integral_order",
     "pages/storage/view/view",
-    "pages/seach/seach",
-    "live/index/index"
+    "pages/seach/seach"
   ],
   "subpackages": [
     {
@@ -90,6 +89,12 @@
     },
     {
       "root": "diy",
+      "pages": [
+        "index/index"
+      ]
+    },
+    {
+      "root": "live",
       "pages": [
         "index/index"
       ]
