--- a/app.json
+++ b/app.json
@@ -52,7 +52,9 @@
     "pages/integral_order/integral_order",
     "pages/storage/view/view",
     "pages/seach/seach",
-    "live/index/index"
+    "live/index/index",
+    "pages/nfc/index/index",
+    "pages/nfc/anti_fake/anti_fake"
   ],
   "subpackages": [
     {
