--- a/app.json
+++ b/app.json
@@ -52,7 +52,7 @@
     "pages/integral_order/integral_order",
     "pages/storage/view/view",
     "pages/seach/seach",
-    "live/index/index",
+    "pages/live/index/index",
     "sweep/pages/index/index",
     "sweep/pages/sweep_detail/sweep_detail"
   ],
