--- a/project.config.json
+++ b/project.config.json
@@ -9,12 +9,20 @@
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
+		"coverView": true,
 		"autoAudits": false,
-		"checkInvalidKey": true
+		"checkInvalidKey": true,
+		"checkSiteMap": true,
+		"uploadWithSourceMap": true,
+		"babelSetting": {
+			"ignore": [],
+			"disablePlugins": [],
+			"outputPath": ""
+		}
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.1",
-	"appid": "wx301c1368929fdba8",
+	"appid": "wxc265cd4269f01dce",
 	"projectname": "fan",
 	"debugOptions": {
 		"hidedInDevtools": []
