--- a/app.json
+++ b/app.json
@@ -97,7 +97,7 @@
   "window": {
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#F9F9F9",
-    "navigationBarTitleText": "",
+    "navigationBarTitleText": "滴金茶业",
     "navigationBarTextStyle": "black"
     
   },
