--- a/project.config.json
+++ b/project.config.json
@@ -22,7 +22,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.1",
-	"appid": "wx301c1368929fdba8",
+	"appid": "wxd233c27fe5c70f82",
 	"projectname": "fan",
 	"debugOptions": {
 		"hidedInDevtools": []
