--- a/project.config.json
+++ b/project.config.json
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.1",
-	"appid": "wxc265cd4269f01dce",
+	"appid": "wx301c1368929fdba8",
 	"projectname": "fan",
 	"debugOptions": {
 		"hidedInDevtools": []
