--- a/app.json
+++ b/app.json
@@ -113,7 +113,7 @@
   "window": {
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#F9F9F9",
-    "navigationBarTitleText": "滴金茶业",
+    "navigationBarTitleText": "",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json"
