--- a/project.config.json
+++ b/project.config.json
@@ -21,7 +21,7 @@
 		}
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.6.1",
+	"libVersion": "2.7.3",
 	"appid": "wx301c1368929fdba8",
 	"projectname": "fan",
 	"debugOptions": {
@@ -47,7 +47,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 3,
+			"current": 5,
 			"list": [
 				{
 					"id": -1,
@@ -80,7 +80,14 @@
 				{
 					"id": -1,
 					"name": "测试",
-					"pathName": "pages/test/test"
+					"pathName": "pages/test/test",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "pages/buy/buy",
+					"pathName": "pages/buy/buy",
+					"scene": null
 				}
 			]
 		}
