--- a/project.config.json
+++ b/project.config.json
@@ -22,7 +22,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.7.3",
-	"appid": "wxc265cd4269f01dce",
+	"appid": "wxd233c27fe5c70f82",
 	"projectname": "fan",
 	"cloudfunctionTemplateRoot": "",
 	"debugOptions": {
