--- a/project.config.json
+++ b/project.config.json
@@ -23,7 +23,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.7.3",
 	"appid": "wxc265cd4269f01dce",
-	"projectname": "fan",
+	"projectname": "Zjp",
 	"cloudfunctionTemplateRoot": "",
 	"debugOptions": {
 		"hidedInDevtools": []
