--- a/app.json
+++ b/app.json
@@ -59,7 +59,8 @@
     "pages/limit_more/limit_more",
     "component/payment/payment",
     "pages/good_lv/good_lv",
-    "sweep/pages/nfc/index"
+    "sweep/pages/nfc/index",
+    "pages/ldm/index"
   ],
   "subpackages": [
     {
