--- a/app.json
+++ b/app.json
@@ -60,7 +60,9 @@
     "component/payment/payment",
     "pages/good_lv/good_lv",
     "sweep/pages/nfc/index",
-    "pages/ldm/index"
+    "pages/ldm/index",
+    "pages/storage/fortune-result/fortune-result",
+    "pages/mingpcha/index"
   ],
   "subpackages": [
     {
